--- a/sass/pages.scss
+++ b/sass/pages.scss
@@ -228,7 +228,7 @@ header{
          .search-btn{
              display: inline-block;
              background-color: $city-green;
-             height: 34px;
+             height: 35px;
              width:35px;
              @include hide-text;
              display: inline-block;
